# SyntaxGrammar

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  install.sh  main.cpp  main.lua  main.py  os_detector.cpp  os_detector.hpp  script_runner.hpp  software_checker.cpp  software_checker.hpp  syntax.smap
